--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,15 @@
 language: node_js
- node_js:
-  - "stable"
- cache:
+node_js:
+ - "stable"
+cache:
  directories:
-  - node_modules
- script:
-  - npm run build
+   - node_modules
+script:
+ - npm run build 
 deploy:
  provider: pages
  skip_cleanup: true
- github_token: $TOKEN_GITHUB
+ github_token: $GITHUB_TOKEN
  local_dir: build
  on:
    branch: master
