--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
+  "homepage": "https://mrlufer.github.io/TSP-MRLUFER/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
