--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,12 @@ cache:
   directories:
     - ~/.npm
 node_js:
-  - '12'
+  - "12"
 git:
   depth: 3
 script:
   - yarn build
+  - firebase deploy
 deploy:
   provider: pages
   edge: true
