--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,9 @@ git:
 script:
   - yarn build
 deploy:
-  provider: pages
-  edge: true
-  skip-cleanup: true
-  keep-history: true
-  github-token: $GITHUB_TOKEN
-  local-dir: build
-  target-branch: gh-pages
-  commit_message: "Deploy release"
+  provider: firebase
+  skip_cleanup: true
+  token:
+    secure: $FIREBASE_TOKEN
   on:
     branch: master
